[package]
name = "rat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow="1.0.44"
chrono = { version = "0.4.39" }
chrono-tz = "0.10.1"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
humantime = "2.1.0"
log = "0.4.25"
prettytable-rs = "0.10.0"
rusqlite = {  version = "0.33.0", features = ["chrono"] }
xdg = "2.5.2"
